Issue 19 - Introduce `wrap` layout component.

--- a/assets/src/css/base/_variables.scss
+++ b/assets/src/css/base/_variables.scss
@@ -1,4 +1,11 @@
 //
+// Dimensions.
+//
+
+$site-max-width: 1080px;
+$site-gutter: 20px;
+
+//
 // Breakpoints.
 //
 
@@ -6,10 +13,12 @@ $breakpoint-mobile: 375px;
 $breakpoint-tablet: 768px;
 $breakpoint-desktop: 1024px;
 $breakpoint-desktop-large: 1440px;
+$breakpoint-site-width: $site-max-width;
 
 $query-breakpoints: (
 	'mobile': $breakpoint-mobile,
 	'tablet': $breakpoint-tablet,
 	'desktop': $breakpoint-desktop,
-	'desktop-large': $breakpoint-desktop-large
+	'desktop-large': $breakpoint-desktop-large,
+	'site-width': $breakpoint-site-width
 );
