--- a/assets/src/css/entry/_default.scss
+++ b/assets/src/css/entry/_default.scss
@@ -3,8 +3,6 @@
 //
 
 .entry {
-	padding: 20px 20px 10px;
-	border-bottom: 1px solid $border-color;
 
 	//
 	// Entry thumbnail.
